--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
-.App {
-  text-align: center;
+body {
+  background-color: gray;  
+  margin: 0; 
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-content {
   display: flex;
-  flex-direction: column;
+  position:relative;
+  background-color:white;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 5% 20%; 
+  font-size: 18px;
+  padding-left: 6%;
+  padding-right: 6%;
+  border-radius: 20px; 
 }
 
-.App-link {
-  color: #61dafb;
+
+.btn.btn-primary.btn-lg{
+    padding: 5px 12px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 18px;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: #061c64df;
+    border-radius: 8px;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    width: 210px;
+    height: 40px;
+  }
+
+  .btn.btn-secondary.btn-lg{
+    padding: 5px 12px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 18px;
+    font-size: 14px;
+    font-weight: 500;
+    background-color:white;
+    border-radius: 8px;
+    text-decoration: none;
+    color:  rgba(243, 166, 23, 0.929);
+    border: solid;
+    cursor: pointer;
+    width: 210px;
+    height: 40px;
+  } 
+
+  
+
+
+
+
+/* Reduce font size for specific elements */
+.blueText1 {
+  font-size: 16px;
+  color:#160776e1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p{
+  font-size: 16px;
+  color:#030953dd
+}
+
+.mt-2{
+  color:#1eb208f4;
+}
+
+
+/* Reduce padding for specific elements */
+.form-select,
+/*.form-check,*/
+.d-flex {
+  padding: 5px; /* Adjust padding as needed */
+  font-size: 22px;
+}
+
+.form-check{
+  font-size: 22px;
+}
+
+.custom-switch .custom-control-input:checked ~ .custom-control-label::before {
+  background-color:white; /* Cambia el color del check cuando está seleccionado */
+}
+
+.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
+  background-color: #061c64df; /* Cambia el color del switch cuando está seleccionado */
+}
+
+.custom-switch .custom-control-input:checked ~ .custom-control-label::before {
+  border-color: #061c64df; /* Cambia el color del área vacía del check cuando está seleccionado */
+}
+
+.custom-switch .form-check-label {
+  color:#030953dd; /* Change the color to your desired color */
+}
+
+
+
+/* Adjust width for specific elements */
+.col-lg-7,
+.col-lg-5 {
+  width: 70%; /* Adjust width as needed */
+}
+
+label{
+  font-size: 14px;
+}
+
+.d-flex.flex-column label{
+color: #030953dd;
 }
