--- a/src/DragDrop.css
+++ b/src/DragDrop.css
@@ -1,70 +1,71 @@
 .drag-drop-container {
-    border: 3px solid #ccc;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 15px;
-    text-align: center;
-    cursor: pointer;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 15px;
+  text-align: center;
+  cursor: pointer;
+  
+}
+
+.drag-drop-content {
+  border: 2px dashed #ccc;
+  border-radius: 10px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.uploaded-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.drag-drop-message {
+  color: #888;
+  cursor: pointer;
+}
+
+.drag-drop-message p {
+  margin: 0;
+}
+
+.mb-0{
+  font-size: 13px;
+}
+
+.Upload-File{
+  
+  padding: 5px 12px;
+  margin-top: 1px;
+  margin-bottom: 2px;
+  margin-left: 18px;
+  font-size: 14px;
+  font-weight: 500;
+  background-color: #061c64df;
+  color: white;
+  border-radius: 8px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  width: 210px;
+  height: 35px;
     
-  }
-  
-  .drag-drop-content {
-    border: 3px dashed #ccc;
-    border-radius: 10px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .uploaded-image {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  
-  .drag-drop-message {
-    color: #888;
-    cursor: pointer;
-  }
-  
-  .drag-drop-message p {
-    margin: 0;
-  }
-  
-  .mb-0{
-    font-size: 13px;
-  }
+}
 
-
+@media (max-width: 768px) {
+  
   .Upload-File {
-    padding: 5px 12px;
-    margin: 1px 0 1px 18px; /* Ajuste el margen para espaciar los botones en pantallas pequeñas */
-    font-size: 14px;
-    font-weight: 500;
-    background-color: #061c64df;
-    color: white;
-    border-radius: 8px;
-    text-decoration: none;
-    border: none;
-    cursor: pointer;
-    width: 210px;
-    min-height: 35px; /* Cambié la propiedad 'height' a 'min-height' para que el botón pueda crecer verticalmente */
-  }
-  
-  @media (max-width: 768px) {
-    /* Estilos para pantallas más pequeñas */
-    .Upload-File {
-      width: auto; /* Establece el ancho automático para permitir que los botones se ajusten */
-      margin-left: 18px; /* Restablecer el margen izquierdo */
-      margin-right: 18px; /* Añadir margen derecho para espaciar los botones */
-    }
-  }
-  
+    width: auto; 
+    margin-left: 18px; 
+    margin-right: 18px; 
+}
+}
 
-
-  .progress-bar.bg-custom {
-    background-color: rgba(243, 166, 23, 0.929);
+.progress-bar.bg-custom {
+  background-color: rgba(243, 166, 23, 0.929);
 }
 
 
